# politician-explorer

./: README.md  docker-compose.yaml
back/: .dockerignore  .gitignore  .pylintrc  Dockerfile  INSTRUCTIONS.md  Makefile  pyproject.toml
back/src/: config.py  factory.py  main.py
back/src/domain/: politician.py  politician_stats.py
back/src/dtos/: politician.py
back/src/errors/: base_error.py  politician_not_found.py
back/src/repositories/: politician_repository.py
back/src/services/: extractor_service.py
back/src/use_cases/: politician_bulk_adder.py  politician_deleter.py  politician_finder.py  politician_stats_viewer.py  politician_updater.py  politician_viewer.py
data/: import.csv
front/: .env  package.json  vite.config.ts
front/src/: main.tsx
front/src/api/: mappers.ts  politicians.ts  types.ts
front/src/components/: AppHeader.tsx  PoliticiansTable.tsx
front/src/hooks/mutations/: politicians.ts
front/src/hooks/queries/: politicians.ts
front/src/pages/: ErrorPage.tsx  Home.tsx  PoliticianDetail.tsx  PoliticianEdit.tsx  Statistics.tsx
